kcm_regionandlang: always run localectl

BUG: 479213

Always try to run localectl, so even if locale pre-generated distro forget to enable GLIBC_LOCALE_PREGENERATED we can still contruct glibc locale map